# tfm

./: .gitignore  main.py  notas.txt  pyproject.toml  readme.md
src/: logging_cfg.py  settings.py
src/clients/: __init__.py  reddit.py  synonim_gen.py
src/extract/: __init__.py  reddit_wrappers.py
src/services/: reddit_dwl.py
src/storage/: __init__.py  io_utils.py  storage_manager.py
src/transform/: normalizers.py
test/services/: __init__.py  reddit_dwl.py
