[tool.poetry]
name = "tfm"
version = "0.1.0"
description = "TFM · Ingesta y analítica e-commerce desde fuentes públicas"
authors = ["Tu Nombre <tu@email>"]
packages = [{ include = "tfm", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
pydantic-settings = "^2.6"
httpx = "^0.27"
tenacity = "^9.0"
typer = {version="^0.12", extras=["all"]}
rich = "^13.9"
pandas = "^2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
ruff = "^0.6"
mypy = "^1.11"
types-requests = "*"

[tool.ruff]
line-length = 100

[tool.mypy]
strict = true
python_version = "3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
